[package]
name = "firebase-rs"
edition = "2021"
version = "2.0.8"
description = "Rust based Firebase library"
readme = "README.md"
repository = "https://github.com/emreyalvac/firebase-rs"
documentation = "https://docs.rs/firebase-rs/2.0.8/firebase_rs/"
license = "MIT"
authors = ["Emre YALVAÇ <emre.yalvac@outlook.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api", "web", "database"]

[dependencies]
url = "2.2.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.100"
serde = { version = "1.0.169", features = ["derive"] }
itertools = "0.10.5"
eventsource-client = "0.10.2"
futures-util = "0.3.28"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
