[package]
name = "firebase-rs"
edition = "2021"
version = "2.2.1"
description = "Rust based Firebase library"
readme = "README.md"
repository = "https://github.com/emreyalvac/firebase-rs"
documentation = "https://docs.rs/firebase-rs/2.2.1/firebase_rs/"
license = "MIT"
authors = ["Emre YALVAÇ <emre.yalvac@outlook.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api", "web", "database"]

[dependencies]
url = "2.2.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
itertools = "0.14.0"
eventsource-client = "0.13.0"
futures-util = "0.3.31"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }